interface upgrade